# mock-workflow

./: .gitignore  BATCH_FEATURE_SUMMARY.md  CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PROJECT_REPORT.md  PROJECT_STRUCTURE.md  README.md  WEB_INTERFACE.md  mock-agent-mvp-plan.md  mock-workflow-mvp-plan.md
mockworkflow-0.2/: .gitignore  .sessions.json  CHANGES_SUMMARY.md  HOWTO_RUN.txt  IMPLEMENTATION_COMPLETE.md  README.md  SECURITY_TEST_REPORT.md  pyproject.toml  start_backend.py
mockworkflow-0.2/backend/: .sessions.json  cache.py  cleaning.py  config.py
mockworkflow-0.2/backend/app/: auth.py  error_handlers.py  exceptions.py  executor.py  main.py  metrics.py  processor.py  scheduler.py  schedules.json  state.py  task_manager.py  tasks.json  user_store.py
mockworkflow-0.2/backend/data/: tz_001_tzsfy_frcxhhb.sql  tz_001_tzsfy_zrrcxhhb.sql  tz_037_gypbdykfrl.sql
mockworkflow-0.2/backend/llm/: __init__.py  model_pool.py  model_rotator.py  openai_parser.py  prompt.py  uncertain_field_parser.py  value_pool.py
mockworkflow-0.2/backend/mock/: cn_identifiers.py  coherence.py  constraint_engine.py  entity_faker.py  frequency_sampler.py  generator.py  markov_generator.py  region_data.py  template_engine.py  validation.py
mockworkflow-0.2/backend/rag/: chroma_store.py  (+4 more)
mockworkflow-0.2/chroma_db/: chroma.sqlite3
mockworkflow-0.2/docs/: QUICK_REFERENCE.md  SECURITY_IMPLEMENTATION.md  生成引擎模块完成情况.md  用户登录开发计划.md
mockworkflow-0.2/frontend/: index.html
mockworkflow-0.2/scripts/: batch_generate_configs.py  crawl_jindata.py
mockworkflow-0.2/tests/: conftest.py
(+3529 files in other folders)
